# CuraThingiBrowserPlugin

./: .coverage  .coveragerc  .gitignore  CMakeLists.txt  LICENSE  README.md  Settings.py  __init__.py  build.sh  plugin.json  pytest.ini  requirements-testing.txt  requirements.txt  test.sh
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  test.yml
ThingiBrowser/: PreferencesHelper.py  Settings.py  ThingiBrowserExtension.py  ThingiBrowserService.py
ThingiBrowser/api/: AbstractApiClient.py  Analytics.py  ApiHelper.py  AuthRequestHandler.py  ImplicitAuthRequestHandler.py  JsonObject.py  LocalAuthServer.py  LocalAuthService.py
ThingiBrowser/drivers/myminifactory/: MyMiniFactoryApiClient.py
ThingiBrowser/drivers/thingiverse/: ThingiverseApiClient.py
ThingiBrowser/models/: DriverOption.py  ViewOption.py
ThingiBrowser/static/: AuthenticationReceived.html  AuthenticationRedirect.html
api/: APIClient.py  Collection.py  JSONObject.py  Models.py  RESTObject.py  User.py
docs/: development.md  installation.md  usage.md
myminifactory/: MyMiniFactoryApiClient.py
tests/: TestPreferencesHelper.py  TestSettings.py  TestThingiBrowserExtension.py  conftest.py
tests/api/: TestJsonObject.py  TestLocalAuthService.py
tests/drivers/myminifactory/: TestMyMiniFactoryApiClient.py
tests/drivers/thingiverse/: TestThingiverseApiClient.py
tests/models/: TestDriverOption.py  TestViewOption.py
thingiverse/: Analytics.py  Thing.py  ThingiverseApiClient.py  ThingiverseExtension.py  ThingiverseService.py
views/: ConfigButton.qml  EnhancedButton.qml  EnhancedComboBox.qml  EnhancedTextField.qml  Link.qml  ServiceButton.qml  ServiceSelector.qml  ShowDialogButton.qml  ThingDetailsPage.qml  ThingFilesList.qml  ThingFilesListItem.qml  ThingSearchPage.qml  ThingTile.qml  ThingTile.qmlc  ThingiHeader.qml  ThingiMain.qml  ThingiSearchbar.qml  ThingiSettings.qml  ThingiSettingsItem.qml  Thingiverse.qml  Thingiverse.qmlc  ThingsList.qml  ThingsList.qmlc  ThingsListItem.qml  ViewButton.qml  ViewButtonSeparator.qml  ViewSelector.qml
